--- a/services/authentication.yaml
+++ b/services/authentication.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: authentication
-          image: "uc4official/authentication_service:latest"
+          image: "uc4official/authentication_service:$AUTHENTICATION_VERSION"
           imagePullPolicy: Always
           env:
             - name: JAVA_OPTS
