--- a/traefik/traefik-router.yaml
+++ b/traefik/traefik-router.yaml
@@ -43,7 +43,7 @@ spec:
         - name: configuration
           namespace: uc4-lagom
           port: 
-    - match: PathPrefix(`/exam-reg-management`)
+    - match: PathPrefix(`/examreg-management`)
       kind: Rule
       services:
         - name: examreg
