--- a/traefik/traefik-router.yaml
+++ b/traefik/traefik-router.yaml
@@ -55,3 +55,9 @@ spec:
         - name: report
           namespace: uc4-lagom
           port: 80
+    - match: PathPrefix(`/admission-management`)
+      kind: Rule
+      services:
+        - name: admission
+          namespace: uc4-lagom
+          port: 80
