--- a/services/configuration.yaml
+++ b/services/configuration.yaml
@@ -28,6 +28,11 @@ spec:
                 secretKeyRef:
                   name: application-secret
                   key: secret
+            - name: HYPERLEDGER_NETWORK_VERSION
+              valueFrom:
+                secretKeyRef:
+                  name: uc4-production-network-version
+                  key: version
             - name: KAFKA_SERVICE_NAME
               value: "_tcp-clients._tcp.strimzi-kafka-brokers.kafka"
             - name: REQUIRED_CONTACT_POINT_NR
