--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -40,7 +40,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: kubernetes-dashboard
-  namespace: kube-system
+  namespace: kubernetes-dashboard
   labels:
     k8s-app: kubernetes-dashboard
 spec:
@@ -56,7 +56,7 @@ kind: Ingress
 apiVersion: extensions/v1beta1
 metadata:
   name: kubernetes-dashboard
-  namespace: kube-system
+  namespace: kubernetes-dashboard
   labels:
     k8s-app: kubernetes-dashboard
   annotations:
