--- a/postgres/postgres-configmap.yaml
+++ b/postgres/postgres-configmap.yaml
@@ -8,4 +8,4 @@ metadata:
 data:
   POSTGRES_USER: postgresadmin
   POSTGRES_PASSWORD: admin1234
-  SERVICES: authentication course certificate user examreg report
+  SERVICES: authentication course certificate user examreg report operation
