Limit user to 0.25 CPU

--- a/services/user.yaml
+++ b/services/user.yaml
@@ -56,6 +56,7 @@ spec:
               value: "3"
           resources:
             limits:
+              cpu: 0.25
               memory: 512Mi
             requests:
               cpu: 0.25
