--- a/services/group.yaml
+++ b/services/group.yaml
@@ -63,6 +63,16 @@ spec:
               value: uc4-cc
             - name: HYPERLEDGER_CA_URL
               value: "https://rca-org1.hlf:7052"
+            - name: HYPERLEDGER_SYSTEM
+              valueFrom:
+                secretKeyRef:
+                  name: credentials.scala-admin-org1
+                  key: username
+            - name: HYPERLEDGER_REGISTRATION_SYSTEM
+              valueFrom:
+                secretKeyRef:
+                  name: credentials.scala-registration-admin-org1
+                  key: username
               
           resources:
             limits:
