--- a/services/matriculation.yaml
+++ b/services/matriculation.yaml
@@ -53,6 +53,8 @@ spec:
               value: uc4-cc
             - name: HYPERLEDGER_CA_URL
               value: "https://rca-org1.hlf:7052"
+            - name: KEYSTORE_PATH
+              value: "/opt/docker/share/pdf/keystore.jks"
               
           resources:
             limits:
@@ -100,6 +102,12 @@ spec:
         - name: connection
           configMap:
             name: connection-profile
+        - name: keystore
+          configMap:
+            name: files
+            items:
+              - key: "keystore.jks"
+                path: "/opt/docker/share/pdf/keystore.jks"
 ---
 apiVersion: v1
 kind: Service
