Add route the org1-ca
Co-authored-by: Paul Kramer <pkramer1@mail.uni-paderborn.de>

--- a/traefik/traefik-router.yaml
+++ b/traefik/traefik-router.yaml
@@ -73,9 +73,26 @@ spec:
         - name: operation
           namespace: uc4-lagom
           port: 80
+    - match: PathPrefix(`/org1-ca`)
+      kind: Rule
+      services:
+        - name: rca-org1
+          namespace: hlf
+          port: 7052
+      middlewares:
+        - name: org1-ca-stripprefix
     - match: PathPrefix(`/`)
       kind: Rule
       services:
         - name: kubernetes-dashboard
           namespace: kubernetes-dashboard
           port: 80
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: org1-ca-stripprefix
+spec:
+  stripPrefix:
+    prefixes:
+      - /org1-ca
