Remove tls to cert

--- a/traefik/traefik-router.yaml
+++ b/traefik/traefik-router.yaml
@@ -87,6 +87,7 @@ spec:
           port: 80
     - match: PathPrefix(`/org1-ca`)
       kind: Rule
+      tls: {}
       services:
         - name: rca-org1
           namespace: hlf
