--- a/traefik/traefik-router.yaml
+++ b/traefik/traefik-router.yaml
@@ -85,28 +85,15 @@ spec:
         - name: examresult
           namespace: uc4-lagom
           port: 80
-    - match: PathPrefix(`/org1-ca`)
+    - match: PathPrefix(`/ca`)
       kind: Rule
-      tls:
-        passthrough: true
       services:
-        - name: rca-org1
-          namespace: hlf
-          port: 7052
-      middlewares:
-        - name: org1-ca-stripprefix
+        - name: cafiles
+          namespace: uc4-support
+          port: 80
     - match: PathPrefix(`/`)
       kind: Rule
       services:
         - name: kubernetes-dashboard
           namespace: kubernetes-dashboard
           port: 80
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: org1-ca-stripprefix
-spec:
-  stripPrefix:
-    prefixes:
-      - /org1-ca
