--- a/support/cafiles.yaml
+++ b/support/cafiles.yaml
@@ -31,22 +31,8 @@ spec:
               containerPort: 8080
               
           volumeMounts:
-            - name: cert
-              mountPath: /web/ca/tls-cert.pem
-              subPath: tls-cert.pem
-              readOnly: true
-            - name: certorg0
-              mountPath: /web/ca/org0-cert.pem
-              subPath: org0-cert.pem
-              readOnly: true
             - name: certorg1
-              mountPath: /web/ca/org1-cert.pem
-              subPath: org1-cert.pem
-              readOnly: true
-            - name: certorg2
-              mountPath: /web/ca/org2-cert.pem
-              subPath: org2-cert.pem
-              readOnly: true
+              mountPath: /web/ca
 
       volumes:
         - name: cert
