--- a/services/operation.yaml
+++ b/services/operation.yaml
@@ -75,6 +75,11 @@ spec:
               value: uc4-cc
             - name: HYPERLEDGER_CA_URL
               value: "https://rca-org1.hlf:7052"
+            - name: FRONTEND_SIGNING_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: secret
               
           resources:
             requests:
